--- a/frontend-perpustakaan/package.json
+++ b/frontend-perpustakaan/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.6.0"
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -24,6 +24,6 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^5.0.0"
+    "vite": "^5.4.21"
   }
 }
