--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
     test:
         runs-on: ubuntu-latest
         container:
-            image: node:22, mysql:8
+            image: mysql:8
             env:
                 mysql_ALLOW_EMPTY_PASSWORD: 'yes'
                 MYSQL_ROOT_PASSWORD: ""
