--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,6 +42,9 @@ jobs:
             - name: Copy Environment Variables
               run: cp .env.example .env
 
+            - name: Generate Application Key
+              run: node ace generate:key
+
             - name: Run Migrations
               run: node ace migration:run --force
 
