--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,21 +12,22 @@ on:
 jobs:
     test:
         runs-on: ubuntu-latest
-        container:
-            image: mysql:8
-            env:
-                mysql_ALLOW_EMPTY_PASSWORD: 'yes'
-                MYSQL_ROOT_PASSWORD: ""
-                MYSQL_DATABASE: app
-                MYSQL_USER: root
-                MYSQL_PASSWORD: ""
-            ports:
-                - 3306:3306
-            options: >-
-                --health-cmd="mysqladmin ping --silent"
-                --health-interval=10s
-                --health-timeout=5s
-                --health-retries=3
+        services:
+            mysql:
+                image: mysql:8
+                env:
+                    MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+                    MYSQL_ROOT_PASSWORD: ""
+                    MYSQL_DATABASE: perpustakaan
+                    MYSQL_USER: root
+                    MYSQL_PASSWORD: ""
+                options: >-
+                    --health-cmd="mysqladmin ping -h localhost"
+                    --health-interval=10s
+                    --health-timeout=5s
+                    --health-retries=5
+                ports:
+                    - 3306:3306
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
